# seilon_voice_recorder

./: README.md  pubspec.yaml  start-claude-kimi.bat
.claude/: settings.local.json
android/: gradle.properties
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main_mobile.dart  main_windows.dart  start-claude-kimi.bat
lib/.claude/: settings.local.json
lib/ble/: audio_util.dart  ble_audio_message.dart  ble_callback_dispatcher.dart  ble_common_message.dart  ble_protocol_cmd.dart  blue_tooth_message_handler.dart
lib/constant/: my_app_common.dart
lib/controllers/: deviceConnect.dart  deviceInfo_control.dart  home_control.dart  my_app.dart  my_window_main_frame.dart  volc_asr_controller.dart
lib/enums/: message_model_enums.dart
lib/protocol/: BleControlMessage.dart  BleControlPackage.dart  LockControllAES.dart
lib/routers/: routers.dart
lib/theme/: app_colors.dart
lib/util/: BleDataUtil.dart  ByteUtil.dart  audio_decode_util.dart  crc_16_util.dart  loading_util.dart  log_util.dart  my_date_utils.dart  my_language_util.dart  my_pcm_util.dart  my_phone_device_util.dart  tcp_util.dart  view_log_util.dart
lib/view/: home.dart  pagination.dart
lib/wiget/: PcmWaveform.dart  alert_button.dart  aurora_background.dart  simple_opus_stream_player.dart  upgrade_dialog.dart
linux/: CMakeLists.txt  my_application.cc
plugins/seilon_dnr/android/src/main/cpp/: CMakeLists.txt  azp_dnr.h  dnr_jni.cpp
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+1 more)
(+155 files in other folders)
